Fix security issues

--- a/Notebooks/Langchain NL2SQL.ipynb
+++ b/Notebooks/Langchain NL2SQL.ipynb
@@ -49,9 +49,9 @@
    "execution_count": 2,
    "outputs": [],
    "source": [
-    "os.environ[\"GOOGLE_API_KEY\"] = \"AIzaSyA47Wh2L_klptRMuclUdwUre47TAAUtXjs\"\n",
+    "os.environ[\"GOOGLE_API_KEY\"] = \"\"\n",
     "os.environ[\"LANGCHAIN_TRACING_V2\"] = \"true\"\n",
-    "os.environ[\"LANGCHAIN_API_KEY\"] = \"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\""
+    "os.environ[\"LANGCHAIN_API_KEY\"] = \"\""
    ],
    "metadata": {
     "collapsed": false,
